refactor js - MacbookPro

--- a/snt1.html
+++ b/snt1.html
@@ -16,9 +16,16 @@
             <p class="intro description">Choose your level -> click play -> guess square.</p>
         </div>
         <div id="fractions-container" class="">
-            <p id="display-fraction" class="intro description introStats hidden">Accuracy: <span id="fraction-total" class="green" >0</span> / <span   id="fraction-right" class="green">0</span></p>
 
-            <p id="problem-numbers" class="intro description introStats hidden">Problem Numbers: <span id="problem-numbers__span" class="red" ></span></p>
+            <p id="display-fraction" class="intro description introStats hidden">
+                Accuracy: <span id="fraction-total" class="green" >0</span>
+                 / <span   id="fraction-right" class="green">0</span>
+            </p>
+
+            <p id="problem-numbers" class="intro description introStats hidden">
+                Problem Numbers: <span id="problem-numbers__span" class="red" ></span>
+            </p>
+            
         </div>
         <!-- TEST -->
         <!-- <p id="problem-numbers" class="intro description hidden">Problem Numbers: <span id="problem-numbers__span"></span></p> -->
