--- a/snt1.html
+++ b/snt1.html
@@ -64,13 +64,14 @@
                     <span id="logo" class="logo">square.100</span>
                 </h1>
             </div> 
+                <div class="sq-table-img-container">
+                    <img id="sq-table-img" class="sq-table-img hidden" src="images/math-tables-1to-100.jpg" alt="">
+                </div>
             <img id="sq-table-img" class="sq-table-img hidden" src="images/math-tables-1to-100.jpg" alt="">
     
-            <!-- TEXTCONTENT KEY VALUE PAIRS OF OBJECT -->
-            <div id="ordered-stat-container" class="ordered-stat-container hidden"></div>
-                <div id="ordered-stat" class="ordered-stat hidden"></div>
-        </div>
-        
+            <!-- TEXTCONTENT KEY VALUE PAIRS OF OBJECT -->                
+            </div>
+            <div id="ordered-stat-container" class="ordered-stat hidden"></div>        
         <script src="assets/js/snt1.js" type="text/javascript"></script>
     </body>
 </html>
