experinemt with styles...

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <!-- TITLE,INTRO TEXT, INSTRUCTIONS -->
             <div>
                 <h1 id="header" class="intro"><span class="title-span">Square.100 - </span> Square Number Trainer</h1>
-                <p id="intro-text" class="intro description">Squares of 1 to 100</p>
+                <p id="intro-text" class="intro description">Squares of numbers 1 to 100</p>
                 <p class="intro description">Choose your level -> click play -> guess square.</p>
             </div>
             <!-- STATS -->
