--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             <!-- <p id="problem-numbers" class="intro description hidden">Problem Numbers: <span id="problem-numbers__span"></span></p> -->
             <!-- TOGGLE PLAYER / -->
             <div>
-                <button id="player__toggle" class="player__toggle"  >SqTable / Statistics</button>
-                <button id="table__toggle" class="table__toggle table-play hidden" >Play</button>
+                <button id="player__toggle" class="player__toggle"  >View SqTable / Statistics</button>
+                <button id="table__toggle" class="table__toggle table-play hidden" >Return to Player</button>
             </div>
                 <div id="player-container" class="player-container">
                     <div id="buttons-row" class="buttons-row hidden">
