add second stat div

--- a/index.html
+++ b/index.html
@@ -78,9 +78,11 @@
                     <img id="sq-table-img" class="sq-table-img hidden" src="images/math-tables-1to-100.jpg" alt="">
                 </div>
             <img id="sq-table-img" class="sq-table-img hidden" src="images/math-tables-1to-100.jpg" alt="">
-            <div id="ordered-stat-container" class="ordered-stat hidden"></div>     
+            <div id="first-ordered-stat-container" class="ordered-stat first-ordered-stat-container hidden"></div>     
+
+            <div id="second-ordered-stat-container" class="ordered-stat second-ordered-stat-container hidden"></div>    
             <!-- TEXTCONTENT KEY VALUE PAIRS OF OBJECT -->                
-            </div>
+        </div>
             <!-- <div id="ordered-stat-container" class="ordered-stat hidden"></div>         -->
         <script src="assets/js/snt1.js" type="text/javascript"></script>
     </body>
