refactor  play with css

--- a/index.html
+++ b/index.html
@@ -69,10 +69,11 @@
                         <p id="prog-bar-text" class="prog-bar-text hidden"><span id="prog-bar-text__span"></span></p>
                     </div>
                 </div>
-                <h1><button id="start-button" class="startPlay">Start</button>
+                <div class="button-logo-container">
+                    <button id="start-button" class="startPlay">Start</button>
                     <button id="play-button" class="hidden startPlay">Play</button>
                     <span id="logo" class="logo">square.100</span>
-                </h1>
+                </div>
             </div> 
                 <div class="sq-table-img-container">
                     <img id="sq-table-img" class="sq-table-img hidden" src="images/math-tables-1to-100.jpg" alt="">
