--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div>
                 <h1 id="header" class="intro"><span class="title-span">Square.100 - </span> Square Number Trainer</h1>
                 <p id="intro-text" class="intro description">Squares of numbers 1 to 100</p>
-                <p class="intro description">Choose your level -> click play -> guess square.</p>
+                <!-- <p class="intro description">Choose your level -> click play -> guess square.</p> -->
             </div>
             <!-- STATS -->
             <div id="fractions-container" class="fractions-container">
