simplify xsmall css

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             <button class="level-buttons hidden" id="lev10">10</button>
                         <!-- </div> -->
                     </div>
-                    <h2 id="level-message" class="player-row hidden">you are on level <span id="display-level" class="display-level">1 (2-10)</span></h2>
+                    <h2 id="level-message" class="player-row level-message hidden">you are on level <span id="display-level" class="display-level"></span></h2>
                     <h2 id="instruction" class="instruction player-row hidden"></h2>
                     <h2 id="question" class=" question player-row hidden">what is <span id="question-span" class="question-span"></span> squared?</h2>
                     <!-- !!! autofocus WILL PLACE CURSOR TO INPUT FIELD WHEN PAGE LOADED !!! -->
@@ -71,7 +71,7 @@
                 </div>
                 <div class="button-logo-container">
                     <button id="start-button" class="startPlay">Start</button>
-                    <button id="play-button" class="hidden startPlay">Play</button>
+                    <button id="play-button" class="hidden startPlay">Play<span id="display-level-play-button" class="display-level-play-button"></span></button>
                     <span id="logo" class="logo">square.100</span>
                 </div>
             </div> 
