add cool fonts to lge - MacBook

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
         <script type="text/javascript" src="assets/js/lib/jquery-2.1.4.min.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Bungee+Inline&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
+        <!-- NEW -->
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 
         <link rel='stylesheet' type="text/css" media='screen and (min-width: 100px) and (max-width: 600px)' href='assets/css/xsmall.css' />
         <!-- <link rel='stylesheet' type="text/css" media='screen and (min-width: 601px) and (max-width: 1024px)' href='src/css/medium.css' /> -->
