add messege to empty stat divs lge size - MacBoook

--- a/index.html
+++ b/index.html
@@ -73,15 +73,18 @@
                     </div>
                 </div>
                 <div class="button-logo-container">
-                    <button id="start-button" class="startPlay">Start</button>
-                    <button id="play-button" class="hidden startPlay">Play<span id="display-level-play-button" class="display-level-play-button"></span></button>
+                    <button id="start-button" class="start-button startPlay">Start</button>
+                    <button id="play-button" class="play-button hidden startPlay">Play<span id="display-level-play-button" class="display-level-play-button"></span></button>
                     <span id="logo" class="logo">square.100</span>
                 </div>
             </div> 
                 <div class="sq-table-img-container">
+                    <div id="table-img-header" class="table-img-header hidden">
+                        <h2>squares of natural numbers from 1 to 100</h2>
+                    </div>
                     <img id="sq-table-img" class="sq-table-img hidden" src="images/math-tables-1to-100.jpg" alt="">
                 </div>
-            <img id="sq-table-img" class="sq-table-img hidden" src="images/math-tables-1to-100.jpg" alt="">
+            <!-- <img id="sq-table-img" class="sq-table-img hidden" src="images/math-tables-1to-100.jpg" alt=""> -->
             <div id="first-ordered-stat-container" class="ordered-stat first-ordered-stat-container hidden"></div>     
 
             <div id="second-ordered-stat-container" class="ordered-stat second-ordered-stat-container hidden"></div>    
