add Query CDN to index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
         <title>Square Number Trainer</title>    
         <!-- FIX DEV TOOLS DEVICE, WITHOUT THIS STYLES NOT APPLIED  -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
         <script type="text/javascript" src="assets/js/lib/jquery-2.1.4.min.js"></script>
+
+        <!-- QUERY CDN -->
+        <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
+
         <link href="https://fonts.googleapis.com/css?family=Bungee+Inline&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
         <!-- NEW -->
