--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                 <button id="play-button" class="play-button hidden startPlay disabled-in-play">Play<span
                         id="display-level-play-button" class="display-level-play-button"></span></button>
                 <span id="logo" class="logo">square.100</span>
+                <button id="reset-button" class="reset-button">Reset</button>
             </div>
         </div>
         <div class="sq-table-img-container">
