add reset button style

--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
                 </div>
             </div>
             <div class="button-logo-container">
-                <button id="start-button" class="start-button startPlay">Start</button>
-                <button id="play-button" class="play-button hidden startPlay disabled-in-play">Play<span
+                <button id="start-button" class="start-button start-play-reset">Start</button>
+                <button id="play-button" class="play-button hidden start-play-reset disabled-in-play">Play<span
                         id="display-level-play-button" class="display-level-play-button"></span></button>
                 <span id="logo" class="logo">square.100</span>
-                <button id="reset-button" class="reset-button">Reset</button>
+                <button id="reset-button" class="reset-button start-play-reset">Reset</button>
             </div>
         </div>
         <div class="sq-table-img-container">
