add more reset styles

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <button id="play-button" class="play-button hidden start-play-reset disabled-in-play">Play<span
                         id="display-level-play-button" class="display-level-play-button"></span></button>
                 <span id="logo" class="logo">square.100</span>
-                <button id="reset-button" class="reset-button start-play-reset">Reset</button>
+                <button id="reset-button" class="reset-button start-play-reset disabled-in-play">Reset</button>
             </div>
         </div>
         <div class="sq-table-img-container">
